--- a/theme.css
+++ b/theme.css
@@ -1,56 +1,95 @@
 /**
- * @name Discord Revamp
- * @description A revamped theme inspired by the Discord promotional materials
- * @version 1.0
- * @author ruukulada
-**/
-.theme-dark,.theme-light,:root {
-  --primary-100:hsl(30, 100%, 92%);  /* Light Beige */
-  --primary-130:hsl(30, 87%, 87%);   /* Light Bronze */
-  --primary-160:hsl(30, 77%, 82%);   /* Light Copper */
-  --primary-200:hsl(30, 67%, 77%);   /* Pale Copper */
-  --primary-230:hsl(30, 57%, 72%);   /* Soft Bronze */
-  --primary-260:hsl(30, 47%, 67%);   /* Soft Copper */
-  --primary-300:hsl(30, 37%, 62%);   /* Medium Copper */
-  --primary-330:hsl(30, 27%, 57%);   /* Medium Bronze */
-  --primary-345:hsl(30, 17%, 52%);   /* Deep Copper */
-  --primary-360:hsl(30, 7%, 47%);    /* Deep Bronze */
-  --primary-400:hsl(30, 6%, 44%);    /* Rich Copper */
-  --primary-430:hsl(30, 5%, 41%);    /* Rich Bronze */
-  --primary-460:hsl(30, 4%, 38%);    /* Dark Copper */
-  --primary-500:hsl(30, 3%, 35%);    /* Dark Bronze */
-  --primary-530:hsl(30, 2%, 32%);    /* Deep Brown */
-  --primary-560:hsl(30, 1%, 29%);    /* Charcoal Brown */
-  --primary-600:hsl(30, 0%, 26%);    /* Dark Charcoal */
-  --primary-630:hsl(30, 0%, 23%);    /* Blackened Bronze */
-  --primary-645:hsl(30, 0%, 20%);    /* Oiled Leather */
-  --primary-660:hsl(30, 0%, 17%);    /* Smoky Black */
-  --primary-700:hsl(30, 0%, 17%);    /* Smoky Black */
-  --primary-730:hsl(30, 0%, 17%);    /* Smoky Black */
-  --primary-760:hsl(30, 0%, 17%);    /* Smoky Black */
-  --primary-800:hsl(30, 0%, 16%);    /* Charcoal Black */
-  --primary-830:hsl(30, 0%, 16%);    /* Charcoal Black */
-  --primary-860:hsl(30, 0%, 16%);    /* Charcoal Black */
-  --primary-900:hsl(30, 0%, 15%);    /* Black */
-  --primary-500-hsl:30 3% 35%;       /* Dark Bronze */
-  --background-modifier-accent:var(--primary-630); /* Blackened Bronze */
-  --background-modifier-active:var(--primary-600); /* Dark Charcoal */
-  --background-modifier-hover:var(--primary-600); /* Dark Charcoal */
-  --background-modifier-selected:var(--primary-560); /* Charcoal Brown */
-  --search-popout-option-fade:transparent;
-  --search-popout-option-fade-hover:transparent;
+ * @name midnight (vencord)
+ * @description A dark, rounded discord theme. Based on Vencord's colour palette. (https://vencord.dev/)
+ * @author refact0r, esme, anubis
+ * @version 1.6.2
+ * @invite nz87hXyvcy
+ * @website https://github.com/refact0r/midnight-discord
+ * @source https://github.com/refact0r/midnight-discord/blob/master/flavors/midnight-vencord.theme.css
+ * @authorId 508863359777505290
+ * @authorLink https://www.refact0r.dev
+*/
+
+/* IMPORTANT: make sure to enable dark mode in discord settings for the theme to apply properly!!! */
+
+@import url('https://refact0r.github.io/midnight-discord/midnight.css');
+
+@import url('https://fonts.googleapis.com/css?family=Inter');
+
+/* customize things here */
+:root {
+	/* font, change to 'gg sans' for default discord font*/
+	--font: 'Inter';
+
+	/* top left corner text */
+	--corner-text: 'SlimeCrew';
+
+	/* color of status indicators and window controls */
+	--online-indicator: #89b481; /* change to #23a55a for default green */
+	--dnd-indicator: #d3869b; /* change to #f13f43 for default red */
+	--idle-indicator: #d8a656; /* change to #f0b232 for default yellow */
+
+	/* accent colors */
+	--accent-1: #7caea3; /* links */
+	--accent-2: hsl(343.6, 46.7%, 67.6%); /* general unread/mention elements */
+	--accent-3: hsl(343.6, 46.7%, 67.6%); /* accent buttons */
+	--accent-4: hsl(343.6, 46.7%, 67.6%); /* accent buttons when hovered */
+	--accent-5: hsl(343.6, 46.7%, 61.6%); /* accent buttons when clicked */
+	--mention: hsla(343.6, 46.7%, 61.6%, 0.1); /* mentions & mention messages */
+	--mention-hover: hsla(343.6, 46.7%, 61.6%, 0.05); /* mentions & mention messages when hovered */
+
+	/* text colors */
+	--text-0: var(--bg-4); /* text on colored elements */
+	--text-1: var(--text-2); /* other normally white text */
+	--text-2: hsl(37, 40%, 84%); /* headings and important text */
+	--text-3: hsl(37, 40%, 72%); /* normal text */
+	--text-4: hsl(37, 20%, 60%); /* icon buttons and channels */
+	--text-5: #d4be9866; /* muted channels/chats and timestamps */
+
+	/* background and dark colors */
+	--bg-1: hsl(0, 0%, 25%); /* dark buttons when clicked */
+	--bg-2: hsl(20, 5%, 22%); /* dark buttons */
+	--bg-3: hsl(10, 3%, 20%); /* spacing, secondary elements */
+	--bg-4: hsl(0, 0%, 16%); /* main background color */
+	--hover: rgba(160, 130, 120, 0.1); /* channels and buttons when hovered */
+	--active: rgba(160, 130, 120, 0.2); /* channels and buttons when clicked or selected */
+	--message-hover: hsla(0, 0%, 0%, 0.1); /* messages when hovered */
+
+	/* amount of spacing and padding */
+	--spacing: 12px;
+
+	/* animations */
+	/* ALL ANIMATIONS CAN BE DISABLED WITH REDUCED MOTION IN DISCORD SETTINGS */
+	--list-item-transition: 0.2s ease; /* channels/members/settings hover transition */
+	--unread-bar-transition: 0.2s ease; /* unread bar moving into view transition */
+	--moon-spin-transition: 0.4s ease; /* moon icon spin */
+	--icon-spin-transition: 1s ease; /* round icon button spin (settings, emoji, etc.) */
+
+	/* corner roundness (border-radius) */
+	--roundness-xl: 22px; /* roundness of big panel outer corners */
+	--roundness-l: 20px; /* popout panels */
+	--roundness-m: 16px; /* smaller panels, images, embeds */
+	--roundness-s: 12px; /* members, settings inputs */
+	--roundness-xs: 10px; /* channels, buttons */
+	--roundness-xxs: 8px; /* searchbar, small elements */
+
+	/* direct messages moon icon */
+	/* change to block to show, none to hide */
+	--discord-icon: none; /* discord icon */
+	--moon-icon: block; /* moon icon */
+	--moon-icon-url: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 27 27' width='24' height='24'%3E%3Cpath fill='currentColor' d='M0 0h7v1H6v1H5v1H4v1H3v1H2v1h5v1H0V6h1V5h1V4h1V3h1V2h1V1H0m13 2h5v1h-1v1h-1v1h-1v1h3v1h-5V7h1V6h1V5h1V4h-3m8 5h1v5h1v-1h1v1h-1v1h1v-1h1v1h-1v3h-1v1h-2v1h-1v1h1v-1h2v-1h1v2h-1v1h-2v1h-1v-1h-1v1h-6v-1h-1v-1h-1v-2h1v1h2v1h3v1h1v-1h-1v-1h-3v-1h-4v-4h1v-2h1v-1h1v-1h1v2h1v1h1v-1h1v1h-1v1h2v-2h1v-2h1v-1h1M8 14h2v1H9v4h1v2h1v1h1v1h1v1h4v1h-6v-1H5v-1H4v-5h1v-1h1v-2h2m17 3h1v3h-1v1h-1v1h-1v2h-2v-2h2v-1h1v-1h1m1 0h1v3h-1v1h-2v-1h1v-1h1'%3E%3C/path%3E%3C/svg%3E");
+	--moon-icon-size: cover;
+
+	/* filter uncolorable elements to fit theme */
+	/* (just set to none, they're too much work to configure) */
+	--login-bg-filter: none; /* login background artwork */
+	--green-to-accent-3-filter: none; /* add friend page explore icon */
+	--blurple-to-accent-3-filter: none; /* add friend page school icon */
 }
 
-/* hide groomer junk */
-/* nitro/shop page   */ a[data-list-item-id$="___nitro"], a[data-list-item-id$="___shop"],
-/* help/nitro button */ a[href="https://support.discord.com"], button[aria-label="Send a gift"],
-/* suggested friends */ div[aria-label="Friends"]>div[aria-label="Suggestions"],
-/* activity button   */ div[class^="buttonContainer_"]:has(button[aria-label="Start An Activity"]),
-/* call ui cleanup   */ div[class*="poppedOut_"], div[class^="voiceEffectsActionBar_"],
-/* context cleanup   */ div[id="textarea-context"]>div>div[role="separator"], div[id="textarea-context-languages"],
-/*                   */ div[id^="textarea-context-s"], div[id^="textarea-context-vcd-spellcheck"],
-/* add/public server */ ul[data-list-id="guildsnav"]>div>:has(div[aria-label="Add a Server"]),
-/*                   */ ul[data-list-id="guildsnav"]>div>:has(div[aria-label="Explore Discoverable Servers"])
-  { display: none; }
-/* fix inbox mask    */ foreignObject[mask="url(#svg-mask-avatar-status-round-16)"]
-  { mask-mode: alpha; }
+/* disable DM spin */
+.wrapper__8436d:hover > .childWrapper_a6ce15::before,
+.wrapper__8436d.selected_ae80f7 > .childWrapper_a6ce15::before {
+	background: var(--text-0);
+	transform: rotate(-0deg) scale(0.8);
+}
